# qt_IM

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
.cache/clangd/index/: example.cpp.036B593BDE913BD2.idx  file_client_dialog.cpp.1D3DBEBD5EAFCAB6.idx  file_client_dialog.h.7E1BACDF9A1EBA32.idx  file_server_dialog.cpp.901FDF082F714628.idx  file_server_dialog.h.E4167961AB625A58.idx  login_dialog.cpp.8CF5DDE528F12A9D.idx  login_dialog.h.516120D2B5E1A2A2.idx  main.cpp.D021AFC9D8580FBE.idx  main_window.cpp.7CF33AB7DA946FF5.idx  main_window.h.DBEFEA6BA1B0C8D9.idx
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  mainwindow.cpp
src/socks5/: CMakeLists.txt  socks5.hpp
src/widgets/: CMakeLists.txt  file_client_dialog.cpp  file_client_dialog.h  file_client_dialog.ui  file_server_dialog.cpp  file_server_dialog.h  file_server_dialog.ui  login_dialog.cpp  login_dialog.h  login_dialog.ui  login_form.cpp  login_form.h  login_form.ui  main_window.cpp  main_window.h  main_window.ui
src/widgets/moveable_frameless_window/: moveable_frameless_window.cpp  moveable_frameless_window.h
tests/: CMakeLists.txt  example.cpp  file.cpp  file_server_dialog_test.cpp  login_form_test.cpp  socks5_test.cpp
